# nf1protein

./: .gitignore  ACTIVE_PIPELINE.md  DEVELOPMENT_ROADMAP.md  LAB_PROTOCOLS.md  README.md  analyze_structure.py  experimental_calibration.py  pyproject.toml  requirements.txt  topol.top
alphafold_models/: alphafold_processor.py  fold_2026_05_15_18_38_full_data_0.json  fold_2026_05_15_18_38_full_data_1.json  fold_2026_05_15_18_38_full_data_2.json  fold_2026_05_15_18_38_job_request.json  fold_2026_05_15_18_38_model_1.cif  fold_2026_05_15_18_38_summary_confidences_1.json  fold_2026_05_15_18_38_summary_confidences_3.json  fold_2026_05_15_18_38_summary_confidences_4.json
alphafold_models/ensemble_and_references/: ensemble_state_73d6.cif
analysis/: ensemble_sensitivity_analysis.py
bridge_models/: biological_constraints.py  evidence_weighted_calibration.py
config/: scoring.json
core/: biology.py  scoring.py
nf1protein-main (4)/nf1protein-main/: README.md  README_TAPC.md  experimental_calibration.py  index.html  molecular_analysis.ipynb  molecular_analysis.py  (+2 more)
notebooks/: jacobian_analysis.py  stochastic_noise.py
optimization/: genetic_optimizer.py
simulations/: INTEGRATION_README.md  __init__.py  cif_coordinate_bridge.py  colored_noise_langevin_model.py  config.py  coupled_ode_v1.py  mutation_robustness_screen.py  random.py  result.py  trajectory_analysis.py
tests/: statistical_profile_v2.py  test_config_integration.py  test_decomposition_golden.py  test_mfe.py  test_result_dataclass.py  test_rng_reproducibility.py  test_scoring.py  test_trajectory_analysis.py
(+32 files in other folders)
