[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nf1protein"
version = "0.2.0"
description = "A multi-scale computational framework for rational RNA pre-screening and stability landscape profiling."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "biopython>=1.79",
    "sympy>=1.9"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0"
]
rna = [
    "ViennaRNA>=2.5.0"
]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0"
]
